--- a/modal.jade
+++ b/modal.jade
@@ -44,15 +44,6 @@ head
 	//Style modal
 	link(rel="stylesheet" href="css/agora-modal.css")
 
-	//- //Agora FrameWork
-	//- link(rel="stylesheet" href="css/agora-frameWork.css")
-
-	//Agora Media Queris
-	//- link(rel="stylesheet" href="css/agora-mediaQueries.css")
-
-	//- //Style modal
-	//- link(rel="stylesheet" href="css/grid.css")
-
 	
 
 body
@@ -79,15 +70,8 @@ body
 				img.organizadorEventoImgPerfil__modal(src="images/luna.png")
 				p.organizadorEventoNombre__modal Instituto Veracruzano de Cultura | IVEC
 			div.redesSociales__modal
-				a.tooltip-top(href="" data-tooltip="Tooltip Facebook"): i.icon-facebook.icono-modal
-				a.tooltip-top(href="" data-tooltip="Tooltip Twitter"): i.icon-twitter.icono-modal
-				a.tooltip-top(href="" data-tooltip="Tooltip Instagram"): i.icon-instagram.icono-modal
-				a.tooltip-top(href="" data-tooltip="Tooltip Teléfono"): i.icon-telefono.icono-modal
-				a.tooltip-top(href="" data-tooltip="Tooltip Dirección"): i.icon-direccion.icono-modal
-
-		div.menu__imagenes
-			div.compartir
-				i.icon-compartir
-			div
-				i.anterior.icon-anterior
-				i.siguiente.icon-siguiente
+				a.tooltip-top(href=""): i.icon-facebook.icono-modal
+				a.tooltip-top(href=""): i.icon-twitter.icono-modal
+				a.tooltip-top(href=""): i.icon-instagram.icono-modal
+				a.tooltip-top(href=""): i.icon-telefono.icono-modal
+				a.tooltip-top(href=""): i.icon-direccion.icono-modal
