--- a/subeTuEvento.jade
+++ b/subeTuEvento.jade
@@ -112,7 +112,7 @@ div.contenedor
 		div.formas__mediosDeComunicacion
 			div.correoWeb.medioDeComunicacion
 				div.imagen__medio
-					img.imagen-fluida(src="images/correo.svg")
+					img.imagen-fluida(src="images/correo-subetuevento.svg")
 				h5.nombre__medio Correo Web
 				p.descripcion__medio Descripción de el medio para enviar la información de tu o tus eventos
 				button.boton__medio MOSTRAR
@@ -126,7 +126,7 @@ div.contenedor
 
 			div.formulario.medioDeComunicacion
 				div.imagen__medio
-					img.imagen-fluida(src="images/formulario.svg")
+					img.imagen-fluida(src="images/formulario-subetuevento.svg")
 				h5.nombre__medio Formulario
 				p.descripcion__medio Descripción de el medio para enviar la información de tu o tus eventos
 				button.boton__medio MOSTRAR
