--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -9,7 +9,7 @@
 			width: 100%;
 		    height: 100%;
 		    position: relative;
-		    margin-top: 2rem;
+		    margin-top: 1rem;
 		    left: 0;
 		    bottom: 0;
 		    padding: 0 1rem;
@@ -50,6 +50,89 @@
 		.botonMenu, .menuOverlay {
 			visibility: visible;
 		}
+	/*Menu Apaisado*/
+		.menuNavegacionApaisado {
+	      position: fixed;
+	      width: 100%;
+	      height: 2rem;
+	      padding: 0 1rem;
+	      justify-content: space-between;
+	      align-items: center;
+	      background-color: var(--blanco);
+	      color: var(--oxford);
+	      z-index: 8; 
+	      border-bottom: 1px solid var(--ahuesado);
+	      top: 0;
+	      line-height: 1;
+	    }
+
+	    .botonMenu {
+	      position: fixed;
+	      top: 1px;
+	      right: 2%;
+	      height: 18px;
+	      width: 23px;
+	      cursor: pointer;
+	      z-index: 100;
+	      -webkit-transition: opacity .25s ease;
+	      transition: opacity .25s ease;
+	    }
+
+	    .botonMenu:hover {
+	      opacity: .7;
+	    }
+
+	    .botonMenu.active .top {
+	      -webkit-transform: translateY(10px) translateX(0) rotate(45deg);
+	              transform: translateY(10px) translateX(0) rotate(45deg);
+	      background: var(--anaranjado);
+	    }
+
+	    .botonMenu.active .middle {
+	      opacity: 0;
+	    }
+
+	    .botonMenu.active .bottom {
+	      -webkit-transform: translateY(-10px) translateX(0) rotate(-45deg);
+	              transform: translateY(-10px) translateX(0) rotate(-45deg);
+	      background: var(--anaranjado);
+	      top: 24px;
+	    }
+
+	    .botonMenu span {
+	      background: var(--anaranjado);
+	      border: none;
+	      height: 3px;
+	      width: 100%;
+	      position: absolute;
+	      top: 4px;
+	      left: 0;
+	      -webkit-transition: all .35s ease;
+	      transition: all .35s ease;
+	      cursor: pointer;
+	    }
+
+	    .botonMenu span:nth-of-type(2) {
+	    top: 12px;
+	    }
+
+	    .botonMenu span:nth-of-type(3) {
+	    top: 20px;
+	    }
+
+	    .menuOverlay {
+	      position: fixed;
+	      background-color: var(--anaranjado);
+	      left: 0;
+	      width: 100%;
+	      opacity: 1;
+	      visibility: hidden;
+	      -webkit-transition: opacity .35s, visibility .35s, width .35s;
+	      transition: opacity .35s, visibility .35s, width .35s;
+	      z-index: 8;
+	      overflow: auto;
+	      top: 2rem;
+	    }
 
 /*////---- M O D A L ----\\\\*/
 	.contenedor__modal{
@@ -334,10 +417,10 @@
 	}
 }
 
-/*md*/
+/*md*//*Cambio pPosición del Menú*/
 @media (min-width:768px)  {
 
-/*////---- P L A T A F O R M A ----\\\\*//*Cambio pPosición del Menú*/
+/*////---- P L A T A F O R M A ----\\\\*/
 	.contenedorTarjetasEventos{
 			width: calc(100% - 3rem);
 		    height: 100vh;
@@ -381,11 +464,54 @@
 	/* Menú Navegación */
 		.menuNavegacionVertical {
 			display: flex;
+			position: fixed;
+			right: 0;
+			width: 3rem;
+			height: 100vh;
+			padding: 1rem 0 .5rem 0;
+			flex-flow: column;
+			justify-content: space-between;
+			align-items: center;
+			background-color: var(--blanco);
+			color: var(--profundo); 
+			text-align: center;
+			border-left: 1px var(--claro) solid;
+			top: 0;
 		}
+		
+		.menuNavegacionVertical--ul {
+	      list-style: none;
+	      padding: 0;
+	    }
+
+	    .menuNavegacionVertical--ul li {
+	      margin: 1rem 0;
+	    }
+
+	    .icono--menu, .icono--back  {
+	      color: var(--profundo);
+	      width: 2rem;
+	    }
 
 		.back{
 			display: flex;
+			background-color: var(--blanco);
+			color: var(--oxford);
+			border-radius: 50%;
+			width: 2.5rem;
+			height: 2.5rem;
+			line-height: 1;
+			box-shadow: 0 1px 1px var(--tenueTransparente);   
+			position: fixed;
+			bottom: .5rem; 
+			right: 3.75rem;
+			z-index: 8;
+			text-align: center;
 		}
+		
+		.icono--menu:focus, .icono--menu:hover {
+	      color: var(--anaranjado);
+	    }
 
 		.menuNavegacionApaisado {
 			display: none;
@@ -394,6 +520,7 @@
 		.botonMenu, .menuOverlay {
 			visibility: hidden;
 		}
+
 /*////---- M O D A L ----\\\\*/
 	.contenedor__modal{
 		grid-template-columns: 2rem 1fr 1fr 2rem;
@@ -468,7 +595,7 @@
 		}
 
 	.formas, .sube, .tiempos {
-		/*height: 80vh;*/
+		height: 80vh;
 	}
 	/*///////// INICIO /////////*/
 	/*///////// SUBE /////////*/
