--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -35,23 +35,8 @@
 		}
 		
 	/* Menu Navegación */
-		.menuNavegacionVertical {
-			display: none;
-		}
-		
-		.back {
-			display: none;
-		}
-
-		.menuNavegacionApaisado {
-			display: flex;
-		}
-
-		.botonMenu, .menuOverlay {
-			visibility: visible;
-		}
-	/*Menu Apaisado*/
-		.menuNavegacionApaisado {
+		.menuNavegacion {
+		  display: flex;
 	      position: fixed;
 	      width: 100%;
 	      height: 2rem;
@@ -65,21 +50,23 @@
 	      top: 0;
 	      line-height: 1;
 	    }
-
+	
+	/*BotonMenu*/
 	    .botonMenu {
-	      position: fixed;
-	      top: 1px;
-	      right: 2%;
+	      position: relative;
+	      /*top: 1px;
+	      right: 2%;*/
 	      height: 18px;
 	      width: 23px;
 	      cursor: pointer;
-	      z-index: 100;
-	      -webkit-transition: opacity .25s ease;
-	      transition: opacity .25s ease;
+	      /*z-index: 100;*/
+	      /*-webkit-transition: opacity .25s ease;
+	      transition: opacity .25s ease;*/
+	      background: transparent;
 	    }
 
-	    .botonMenu:hover {
-	      opacity: .7;
+	    .botonMenu:hover .botonMenu > span {
+	      background:  var(--anaranjado);
 	    }
 
 	    .botonMenu.active .top {
@@ -100,7 +87,7 @@
 	    }
 
 	    .botonMenu span {
-	      background: var(--anaranjado);
+	      background: var(--profundo);
 	      border: none;
 	      height: 3px;
 	      width: 100%;
@@ -120,7 +107,7 @@
 	    top: 20px;
 	    }
 
-	    .menuOverlay {
+	    /*.menuOverlay {
 	      position: fixed;
 	      background-color: var(--anaranjado);
 	      left: 0;
@@ -132,7 +119,13 @@
 	      z-index: 8;
 	      overflow: auto;
 	      top: 2rem;
-	    }
+	    }*/
+
+
+		/*Back*/
+	    .back {
+			display: none;
+		}
 
 /*////---- M O D A L ----\\\\*/
 	.contenedor__modal{
@@ -462,13 +455,13 @@
 
 
 	/* Menú Navegación */
-		.menuNavegacionVertical {
+		.menuNavegacion {
 			display: flex;
 			position: fixed;
 			right: 0;
 			width: 3rem;
 			height: 100vh;
-			padding: 1rem 0 .5rem 0;
+			padding: 1rem 0;
 			flex-flow: column;
 			justify-content: space-between;
 			align-items: center;
@@ -477,18 +470,47 @@
 			text-align: center;
 			border-left: 1px var(--claro) solid;
 			top: 0;
+			z-index: 9;
 		}
 		
-		.menuNavegacionVertical--ul {
+		.menuNavegacion--ul {
 	      list-style: none;
 	      padding: 0;
 	    }
 
-	    .menuNavegacionVertical--ul li {
+	    .menuNavegacion--ul li {
 	      margin: 1rem 0;
 	    }
 
-	    .icono--menu, .icono--back  {
+	    .icono--menu  {
+	      color: var(--profundo);
+	      width: 2rem;
+	    }
+
+		.icono--menu:focus, .icono--menu:hover {
+	      color: var(--anaranjado);
+	    }
+
+		.menuNavegacion__Extendida {
+			display: flex;
+			position: fixed;
+			right: 3rem;
+			width: 8rem;
+			height: 100vh;
+			padding: 1rem 0;
+			flex-flow: column;
+			justify-content: space-between;
+			align-items: center;
+			background-color: var(--anaranjado);
+			color: var(--blanco); 
+			text-align: center;
+			border-left: 1px var(--claro) solid;
+			top: 0;
+			z-index: 9;
+		}
+
+	/*Back*/
+		.icono--back  {
 	      color: var(--profundo);
 	      width: 2rem;
 	    }
@@ -508,19 +530,6 @@
 			z-index: 8;
 			text-align: center;
 		}
-		
-		.icono--menu:focus, .icono--menu:hover {
-	      color: var(--anaranjado);
-	    }
-
-		.menuNavegacionApaisado {
-			display: none;
-		}
-		
-		.botonMenu, .menuOverlay {
-			visibility: hidden;
-		}
-
 /*////---- M O D A L ----\\\\*/
 	.contenedor__modal{
 		grid-template-columns: 2rem 1fr 1fr 2rem;
