--- a/index.jade
+++ b/index.jade
@@ -60,31 +60,31 @@ body#inicio
 			a(href="index.html"): i.icon-info.icono--menu
 
 		div.menuNavegacion__items
+			p.menuNavegacion--logo ágora
 			ul.menuNavegacion--ul
 				li: a(href="#"): i.icon-descubre.icono--menu
 				li: a(href="#"): i.icon-explora.icono--menu
 				li: a(href="#"): i.icon-comunica.icono--menu
 				li: a(href="#"): i.icon-beta.icono--menu
-				li: a(href="#"): i.icon-a.icono--menu
 
-		div.menuNavegacion__botonMenu
+		div(href="#menuNavegacion__Extendida").menuNavegacion__botonMenu
 			div.botonMenu#botonMenu 
 				span.top
 				span.middle
 				span.bottom
 
 	div.menuNavegacion__Extendida
-		div.menuNavegacion__home
-			a(href="index.html"): i.icon-info.icono--menu
-		div.menuNavegacion__items
-			ul.menuNavegacion--ul
-				li: a(href="#"): i.icon-descubre.icono--menu Buscar
-				li: a(href="#"): i.icon-explora.icono--menu Filtro
-				li: a(href="#"): i.icon-comunica.icono--menu Biblioteca
-				li: a(href="#"): i.icon-beta.icono--menu Fase Alfa
+		div.menuNavegacionExtendida__home
+			a(href="index.html") ágora
+		div.menuNavegacionExtendida__items
+			ul.menuNavegacionExtendida--ul
+				li: a(href="#") Buscar
+				li: a(href="#") Filtro
+				li: a(href="#") Biblioteca
+				li: a(href="#") Fase Alfa
 
 		div.menuNavegacionVertical__Terminos
-				a(href="agora_LandingPage.html") Términos & Condiciones
+				a(href="agora_LandingPage.html") T & C
 
 
 
@@ -199,8 +199,7 @@ body#inicio
 
 		$('#botonMenu').click(function(){
 			$(this).toggleClass('active');
-			//- $('#menuOverlay').toggleClass('open');
-			//- $('body').toggleClass('modal-active');
+			$('.menuNavegacion__Extendida').toggleClass('extendida--activa');
 		});
 
 		$('#banner__enviaTuEvento').click(function(){
